fix(GlModal): Fix modal backdrop color in dark mode

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -461,7 +461,7 @@ $gl-modal-large-width: px-to-rem(990px);
 $modal-header-border-color: $gray-200;
 $modal-footer-border-color: $gray-200;
 $modal-title-line-height: $gl-line-height-20;
-$modal-backdrop: #000;
+$modal-backdrop-bg: #000;
 $modal-backdrop-opacity: 0.64;
 
 // Bootstrap overrides
